[gd_scene format=3 uid="uid://d373hbs2371ef"]

[ext_resource type="Script" uid="uid://ywx3y72unc3x" path="res://unit/unit_overlay.gd" id="2_dcgok"]
[ext_resource type="TileSet" uid="uid://rn1bygx4ex0u" path="res://UI/overlay_cell_tilset.tres" id="2_egmd1"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_egmd1"]

[node name="Unit_overlay" type="Node2D" unique_id=439733676]
script = ExtResource("2_dcgok")

[node name="MoveLayer" type="TileMapLayer" parent="." unique_id=558891917]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.21100001)
tile_set = ExtResource("2_egmd1")

[node name="AttackLayer" type="TileMapLayer" parent="." unique_id=797077930]
unique_name_in_owner = true
self_modulate = Color(0.2827793, 0.55450225, 0.59695137, 0.76500005)
tile_set = ExtResource("2_egmd1")

[node name="ImpactLayer" type="TileMapLayer" parent="." unique_id=732372782]
unique_name_in_owner = true
self_modulate = Color(0.9597307, 0.0007454972, 0.09603114, 0.91764706)
material = SubResource("CanvasItemMaterial_egmd1")
tile_set = ExtResource("2_egmd1")
